Fix z-index of nav toggle
So it doesn't display on top of overlays

--- a/client/src/components/Sidebar/Sidebar.scss
+++ b/client/src/components/Sidebar/Sidebar.scss
@@ -33,7 +33,7 @@
     flex-direction: column;
     height: 100%;
     background: $nav-grey-3;
-    z-index: 3;
+    z-index: 1000;
 
     @include transition(width $menu-transition-duration ease, left $menu-transition-duration ease);
 
@@ -77,8 +77,9 @@
 // This is a separate component as it needs to display in the header
 .sidebar-nav-toggle {
     @include sidebar-toggle;
+    position: fixed;
     display: none;  // Nav toggle is for mobile only
-    z-index: 5;
+    z-index: 1000;
 
     &:hover {
         background: var(--color-primary-dark);
